# theo-openvoice

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gpu  LICENSE  Makefile  README.md  SECURITY.md  dev.sh  docker-compose.yml  install.sh  pyproject.toml  run.sh  setup.sh  test.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml  release.yml  test-deploy.yml
docs/: ADDING_ENGINE.md  ARCHITECTURE.md  CD_PIPELINE.md  FULL_DUPLEX.md  PLAN_RELEASE.md  PRD.md  Plan.md  ROADMAP.md  STRATEGIC_M1.md  STRATEGIC_M2.md  STRATEGIC_M3.md  STRATEGIC_M4.md  STRATEGIC_M5.md  STRATEGIC_M6.md  STRATEGIC_M7.md  STRATEGIC_M8.md  STRATEGIC_M9.md  package.json  sidebars.ts
docs/docs/api-reference/: grpc-internal.md  rest-api.md  websocket-protocol.md
docs/docs/architecture/: overview.md  scheduling.md  session-manager.md  vad-pipeline.md
docs/docs/community/: changelog.md
docs/docs/getting-started/: installation.md
docs/docs/guides/: adding-engine.md  cli.md  full-duplex.md  streaming-stt.md
docs/src/pages/: index.tsx
examples/demo/: README.md  start-demo.sh
examples/demo/backend/: __init__.py  app.py  config.py  jobs.py  main.py
examples/demo/frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json
examples/demo/frontend/app/: globals.css  layout.tsx  page.tsx
examples/demo/frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  select.tsx  slider.tsx  table.tsx  tabs.tsx
examples/demo/frontend/lib/: api.ts
scripts/: build_docker.sh  build_linux.sh  demo_m4.sh  demo_m5.py  demo_m5.sh  demo_m6.py  demo_m6.sh  demo_m7.py  demo_m7.sh  demo_m8.py  demo_m8.sh  demo_m9.py  env.sh  generate_proto.sh  install.ps1  install.sh  test_cli.sh
src/theo/: __init__.py  _types.py  exceptions.py  logging.py
src/theo/cli/: __init__.py  main.py  models.py  ps.py  pull.py  remove.py  serve.py  transcribe.py
src/theo/config/: __init__.py  manifest.py  postprocessing.py  preprocessing.py
src/theo/postprocessing/: __init__.py  itn.py  pipeline.py  stages.py
src/theo/preprocessing/: __init__.py  audio_io.py  dc_remove.py  gain_normalize.py  pipeline.py  resample.py  stages.py  streaming.py
src/theo/proto/: __init__.py  stt_worker.proto  tts_worker.proto
src/theo/registry/: catalog.py  catalog.yaml  downloader.py  registry.py
src/theo/scheduler/: batching.py  cancel.py  converters.py  latency.py  metrics.py  queue.py  scheduler.py  streaming.py  tts_converters.py  tts_metrics.py
src/theo/server/: app.py  constants.py  dependencies.py  error_handlers.py  formatters.py  ws_protocol.py
src/theo/server/models/: events.py  requests.py  responses.py  speech.py
src/theo/server/routes/: _common.py  health.py  realtime.py  speech.py  transcriptions.py  translations.py
src/theo/session/: backpressure.py  cross_segment.py  local_agreement.py  metrics.py  mute.py  ring_buffer.py  state_machine.py  streaming.py  wal.py
src/theo/vad/: __init__.py  detector.py  energy.py  silero.py
src/theo/workers/: manager.py
src/theo/workers/stt/: __init__.py  __main__.py  converters.py  faster_whisper.py  interface.py  main.py  servicer.py  wenet.py
src/theo/workers/tts/: __init__.py  __main__.py  converters.py  interface.py  kokoro.py  main.py  servicer.py
tests/: conftest.py
tests/fixtures/manifests/: invalid_missing.yaml  minimal.yaml  valid_stt.yaml  valid_stt_wenet.yaml  valid_tts.yaml  valid_tts_kokoro.yaml
tests/integration/: test_m6_integration.py  test_m6_recovery.py  test_m6_stability.py  test_openai_sdk_compat.py  test_roundtrip_tts_stt.py  test_worker_e2e.py  test_ws_stability.py  test_ws_streaming.py
tests/unit/: test_api_models.py  test_backpressure.py  test_batch_accumulator.py  test_batch_dispatch.py  test_cancel_grpc.py  test_catalog.py  test_cli_models.py  test_cli_serve.py  test_cli_transcribe.py  test_config.py  test_contract_comparison.py  test_cross_segment_context.py  test_downloader.py  test_e2e_batch.py  test_e2e_pipelines.py  test_error_handling.py  test_exceptions.py  test_faster_whisper_backend.py  test_faster_whisper_streaming.py  test_formatters.py  test_full_duplex.py  test_full_duplex_integration.py  test_health_endpoint.py  test_hot_words_session.py  test_itn_control.py  test_kokoro_backend.py  test_latency_tracker.py  test_local_agreement.py  test_logging.py  test_m2_review_fixes.py  test_m5_edge_cases.py  test_manifest.py  test_manual_commit.py  test_mute_controller.py  test_pipeline_integration.py  test_postprocessing_itn.py  test_postprocessing_pipeline.py  test_preprocessing_dc_remove.py  test_preprocessing_gain_normalize.py  test_preprocessing_pipeline.py  (+52 more)
website/: docusaurus.config.ts  package-lock.json
website/docs/: intro.md
website/docs/community/: contributing.md  roadmap.md
website/docs/getting-started/: configuration.md  quickstart.md
website/docs/guides/: batch-transcription.md
website/src/components/HomepageFeatures/: index.tsx  styles.module.css
website/src/css/: custom.css
website/src/pages/: index.module.css
workflows/: ci.yml  deploy.yml  release.yml  test-deploy.yml
